css/styles.css
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/*
    Created on : 2015-1-5, 4:20:08
    Author     : iliyan
*/

body {
    /*font-family: 'proxima-nova', 'Helvetica', 'Arial', sans-serif;*/
    font-family: "Times New Roman", Times, serif;
}

.h1, h1 {
    font-size: 36px;
    margin: 40px 0;
}

.h2, h2 {
    margin: 30px 0;
}

#main-container {
    min-height: 90%;
}

@media (max-width: 480px) {
    #main-container {
        min-height: 0;
    }
}

ul.nav.navbar-nav > li > a:hover,
ul.nav.navbar-nav > li > a.active,
ul.nav.navbar-nav > li > a:active {
    outline: none;
    background-color: #EEEEEE !important;
}

.disable-responsiveness.container {
    width: 970px !important;
}

#navbar {
    color: #555;
    background: #fff;
    margin: 0;
    border-bottom: 2px solid #dce0d9;
    padding: 0.2em 0 0 0;
    display: block;
}

#navbar a {
    display: inline-block;
    text-transform: uppercase;
    color: #5F6657;
    font-size: 1.0625em;
    border-bottom: 1px solid transparent;
    position: relative;
    left: 1px;
    transition: all 0.4s ease;
}

nav.navbar.shrink {
    height: 50px;
}

nav.shrink a {
    padding-top: 7px !important;
    padding-bottom: 7px !important;
    transition: all 0.4s ease;
}

#logo {
    padding: 0 !important;
}

a:hover {
    color: #219ab3;
}

@media (min-width: 767px) {
    #navbar li a:hover, #navbar li:nth-child(1n) a.active {
        border-bottom: 3px solid #c1d72e;
        margin-bottom: -3px;
    }
    #navbar li:nth-child(2n) a:hover, #navbar li:nth-child(2n) a.active {
        border-bottom: 3px solid #0b81ef;
        margin-bottom: -3px;
    }
}

@media (max-width: 767px) {
    h1 {
        font-size: 18px;
        font-size: 5.9vw;
    }

    h2 {
        font-size: 16px;
        font-size: 3.5vw;
    }

    h3 {
        font-size: 14px;
        font-size: 3.3vw;
    }

    h4 {
        font-size: 13px;
        font-size: 3vw;
    }

    p, a {
        font-size: 13px;
        font-size: 3vw;
    }

    li {
        font-size: 13px;
        font-size: 3vw;
    }
}

.iframe-content {
    height: 585px;
    background: url('/images/mobile-banner.png') top center no-repeat;
}

.iframe-small, .iframe-small body {
    width: 567px;
    height: 368px;
    padding-top: 49px;
    padding-left: 57px;
    border: none;
}

/* Sticky footer start */
html,
body {
    height: 100%;
}

#wrap {
    min-height: 100%;
    height: auto;
    padding: 0 0 100px;
}

#footer {
    /*height: 60px;*/
    background-color: #f5f5f5;
}

/* Sticky footer end */

.footer-container {
    width: 100%;
    margin-top: 15px;
    border-top: 1px solid rgb(220, 224, 217);
}

.footer-container a {
    margin-right: 10px;
    padding: 5px;
    color: #000;
}

.btn-group-horizontal .btn {
    margin-bottom: 15px;
}

.toggle-text {
    padding-left: 30px;
    height: 40px;
    overflow: hidden;
    list-style-position: inside;
}

.about-us-container .about-us-details {
    background: #374852;
    color: #fff;
    margin-top: 0;
    padding-top: 20px;
    padding-bottom: 20px;
}

.about-us-container .about-heading {
    font-size: 20px;
    margin: 20px 0;
}

.about-us-container .row .person-info-container {
    margin-top: 25px;
    padding-bottom: 15px;
}

.about-us-container .row .person-info-container .social-icon {
    margin-left: 15px;
    display: inline-block;
}

.about-us-container .row .person-info-container .person-description {
    margin: 20px 0;
}

.about-us-container .person-info-container .person-name {
    font-weight: bold;
    padding: 10px 0 0 0;
}

.home-container .home-presentation h2 {
    margin-bottom: 35px;
}

.home-container .thumbnail.thumbnail-home {
    border: none;
}

.home-container .carousel-control {
    width: 10%;
}

.devider {
    margin-top: 27px;
}

.deviders {
    margin: 30px 0;
}

.home-container .bottom-border {
    border-bottom: dashed 2px #74747E;
}

.home-container .thumbnail.thumbnail-process {
    border: none;
    padding: 0px;
    margin-bottom: 0px;
}

.home-container .thumbnail.thumbnail-process .caption {
    margin-bottom: 0px;
    padding: 0px 5px 15px 0px;
}

.home-container .thumbnail.thumbnail-process .caption.extra-padding {
    padding-bottom: 40px;
}

.home-container .our-process .process-step {
    border-left: none;
}

@media (min-width: 768px) {
    .home-container .our-process .process-step {
        border-left: solid 2px #74747E;
        margin-top: -12px;
    }
}

.home-container .our-process .fa-dot-circle-o {
    color: #74747E;
    margin-bottom: -2px;
}

.home-container .our-process .fa-dot-circle-o.pull-left {
    margin-left: -2px;
}

.home-container .our-process .fa-dot-circle-o.pull-right {
    margin-right: -2px;
}

#world_map {
    background: #fff url("../images/contacts/world_map.png") no-repeat left top;
}

.angular-google-map-container {
    min-height: 215px;
}

textarea.form-control {
    height: auto;
    min-height: 150px;
}

.technologies-container h3 {
    margin-top: 5px;
}

.page-header {
    border: none;
    padding-bottom: 0;
    margin-bottom: 0;
}

.services-container .page-header h2 {
    margin: 0;
}

.btn.btn-primary {
    background: #3295F1;
}

.btn.btn-primary:hover {
    background-color: #3a77f1 !important;
    border-color: #204d74;
}

/* not a class - an element, do not fix*/
contact-form {
    display: inline-block;
    width: 100%;
}

contact-form .form-group > div.pull-left {
    width: 90%;
}

contact-form .required-field {
    font-size: 16px;
    color: red;
}

.work-values {
    background-position-y: 0px;
    background-size: auto !important;
    min-height: 100px;
}

@media (max-width: 460px) {
    .work-values {
        background-size: 100% !important;
    }
}

.work-values:hover {
    cursor: pointer;
}

.work-values.work-value-1-background {
    background: url('../images/home/icon-8.png') center center no-repeat;
}

.work-values.work-value-1-background:hover {
    background: url('../images/home/icon-8-active.png') center center no-repeat;
}

.work-values.work-value-2-background {
    background: url('../images/home/icon-7.png') center center no-repeat;
}

.work-values.work-value-2-background:hover {
    background: url('../images/home/icon-7-active.png') center center no-repeat;
}

.work-values.work-value-3-background {
    background: url('../images/home/icon-6.png') center center no-repeat;
}

.work-values.work-value-3-background:hover {
    background: url('../images/home/icon-6-active.png') center center no-repeat;
}

.work-values.work-value-4-background {
    background: url('../images/home/icon-5.png') center center no-repeat;
}

.work-values.work-value-4-background:hover {
    background: url('../images/home/icon-5-active.png') center center no-repeat;
}

.list-inside {
    list-style-position: inside;
}

.services-container .panel-body, .services-container .panel-footer {
    padding: 0 !important;
    background-color: #D5D5D5 !important;
    color: white;
    border: none !important;
}

.services-container .panel .h1, .services-container .panel .h3 {
    padding: 0;
    margin: 0;
    color: white;
}

.services-container .panel .h2 {
    padding: 0 0 5px 0;
    margin: 0;
    color: white;
}

.services-container .panel-heading {
    border-bottom: 2px solid #5C5C5C;
}

.services-container .package-footer a {
    padding-top: 20px !important;
}

.package p {
    padding-top: 30px !important;
}

.services-container .panel-body .content {
    margin: 35px 0 35px 15px;
    color: black;
    min-height: 492px;
}

.services-container .panel-body .content .fa {
    font-size: 22px;
    color: white;
    vertical-align: middle;
    padding-right: 20px;
}

.start-up .package {
    background: url('../images/packages/green_up.png') center center no-repeat;
    height: 107px;
}

.start-up .package-footer {
    background: url('../images/packages/green_down.png') center center no-repeat;
    height: 65px;
}

.services-container .start-up .panel-heading {
    background-color: #95b42b;
}

.web-development .package {
    background: url('../images/packages/orange_up.png') center center no-repeat;
    height: 107px;
}

.web-development .package-footer {
    background: url('../images/packages/orange_down.png') center center no-repeat;
    height: 65px;
}

.services-container .web-development .panel-heading {
    background-color: #e8b92f;
}

.design .package {
    background: url('../images/packages/blue_up.png') center center no-repeat;
    height: 107px;
}

.design .package-footer {
    background: url('../images/packages/blue_down.png') center center no-repeat;
    height: 65px;
}

.services-container .design .panel-heading {
    background-color: #347ab8;
}

